[package]
name = "async1"
version = "0.1.0"
authors = ["osboxes"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26.2"
tungstenite = "0.11.1"
log = "0.4.8"
env_logger = "0.7.1"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "sync1"
path = "src/sync1.rs"


[[bin]]
name = "server"
path = "src/server.rs"